--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "trident.js",
-  "version": "1.0.7",
+  "version": "1.1.0",
   "description": "A lightweight Oceanic client framework",
   "main": "index.js",
+  "bin": {
+    "create-trident-app": "./template.js"
+  },
   "exports": {
     ".": [
       {
