Update styling and auto update version for template

--- a/template/package.json
+++ b/template/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "trident.js-start",
+  "name": "my-trident-bot",
   "version": "1.0.0",
   "description": "Quickly start up your Trident.js bot!",
   "main": "index.js",
@@ -10,6 +10,6 @@
   "author": "Velozity",
   "license": "ISC",
   "dependencies": {
-    "trident.js": "^1.1.0"
+    "trident.js": "^1.1.1"
   }
 }
