--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trident.js",
-  "version": "1.2.9",
+  "version": "1.2.9-1",
   "description": "A lightweight Oceanic client framework",
   "main": "index.js",
   "bin": {
@@ -32,7 +32,7 @@
     "@typescript-eslint/parser": "^5.42.0",
     "chalk": "^2.4.2",
     "juration": "^0.1.1",
-    "oceanic.js": "^1.9.0",
+    "oceanic.js": "^1.12.0",
     "readdirp": "^3.6.0",
     "trident.js": "^1.1.0",
     "tslib": "^2.4.1"
