--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trident.js",
-  "version": "1.2.9-1",
+  "version": "1.3.0",
   "description": "A lightweight Oceanic client framework",
   "main": "index.js",
   "bin": {
