--- a/package.json
+++ b/package.json
@@ -1,25 +1,29 @@
 {
   "name": "trident.js",
-  "version": "1.3.0",
+  "version": "2.0.5",
   "description": "A lightweight Oceanic client framework",
-  "main": "index.js",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "bin": {
     "create-trident-app": "./template.js"
   },
   "exports": {
-    ".": [
-      {
-        "require": "./index.js",
-        "import": "./esm.mjs"
-      },
-      "./index.js"
-    ],
-    "./esm": "./esm.mjs"
+    ".": {
+      "require": "./dist/index.js",
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
   },
-  "typings": "./index.d.ts",
+  "files": [
+    "dist",
+    "template",
+    "template.js"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node /tests/index.js"
+    "build": "tsc",
+    "dev": "tsc --watch",
+    "prepublishOnly": "npm run build",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Velozity",
   "license": "ISC",
@@ -38,6 +42,7 @@
   },
   "devDependencies": {
     "@types/node": "^18.11.9",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   }
 }
